bison-parser/examples/ill_typed/bad2.sa
const int x = 4;
const int y = 5;
const int x = 6;
module X
x : bool init false;
endmodule